Add profile... profile
Add a Lein profile for performance testing. Just clj-async-profiler for
now, but should support more libs in the future